Fixed the Overflow

--- a/css/queries.css
+++ b/css/queries.css
@@ -251,7 +251,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 1rem;
+    margin-bottom: 2.5rem;
   }
   .filter p {
     font-size: 2.4rem;
